TestApplication/app/src/main/assets/strongswan/rules.v4
# Generated by iptables-save v1.6.0 on Tue Jun 12 16:07:12 2018
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [3:352]
:POSTROUTING ACCEPT [3:352]
-A FORWARD -s 10.10.0.0/16 -o eth0 -p tcp -m policy --dir in --pol ipsec -m tcp --tcp-flags SYN,RST SYN -m tcpmss --mss 1361:1536 -j TCPMSS --set-mss 1360
COMMIT
# Completed on Tue Jun 12 16:07:12 2018
# Generated by iptables-save v1.6.0 on Tue Jun 12 16:07:12 2018
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [1:168]
:POSTROUTING ACCEPT [1:168]
-A POSTROUTING -s 10.10.0.0/16 -o eth0 -m policy --dir out --pol ipsec -j ACCEPT
-A POSTROUTING -s 10.10.0.0/16 -o eth0 -j MASQUERADE
COMMIT
# Completed on Tue Jun 12 16:07:12 2018
# Generated by iptables-save v1.6.0 on Tue Jun 12 16:07:12 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [3:352]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p udp -m udp --dport 500 -j ACCEPT
-A INPUT -p udp -m udp --dport 4500 -j ACCEPT
-A INPUT -j DROP
-A FORWARD -s 10.10.0.0/16 -m policy --dir in --pol ipsec --proto esp -j ACCEPT
-A FORWARD -d 10.10.0.0/16 -m policy --dir out --pol ipsec --proto esp -j ACCEPT
-A FORWARD -j DROP
COMMIT
# Completed on Tue Jun 12 16:07:12 2018
